#223: changed assertion in hopes to figure out why the test is failing during SSL CI; enabled SSL CI on checking and disabling regular CI

--- a/.github/workflows/build-and-test-ssl.yml
+++ b/.github/workflows/build-and-test-ssl.yml
@@ -14,22 +14,22 @@
 
 name: Run integration tests using two way ssl
 
-on:
-  schedule:
-    - cron: '0 7 * * *'
 #on:
-#  push:
-#    paths-ignore:
-#      - 'README.md'
-#      - '.github/workflows/build-and-test-postgres.yml'
-#      - '.github/workflows/build-and-test-redis.yml'
-#      - '.gitlab-ci.yml'
-#  pull_request:
-#    paths-ignore:
-#      - 'README.md'
-#      - '.github/workflows/build-and-test-postgres.yml'
-#      - '.github/workflows/build-and-test-redis.yml'
-#      - '.gitlab-ci.yml'
+#  schedule:
+#    - cron: '0 7 * * *'
+on:
+  push:
+    paths-ignore:
+      - 'README.md'
+      - '.github/workflows/build-and-test-postgres.yml'
+      - '.github/workflows/build-and-test-redis.yml'
+      - '.gitlab-ci.yml'
+  pull_request:
+    paths-ignore:
+      - 'README.md'
+      - '.github/workflows/build-and-test-postgres.yml'
+      - '.github/workflows/build-and-test-redis.yml'
+      - '.gitlab-ci.yml'
 
 
 jobs:
