--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -15,20 +15,23 @@
 name: Continuous Integration
 
 on:
-  push:
-    paths-ignore:
-      - 'README.md'
-      - '.github/workflows/build-and-test-postgres.yml'
-      - '.github/workflows/build-and-test-redis.yml'
-      - '.github/workflows/publish-image-snapshot.yml'
-      - '.gitlab-ci.yml'
-  pull_request:
-    paths-ignore:
-      - 'README.md'
-      - '.github/workflows/build-and-test-postgres.yml'
-      - '.github/workflows/build-and-test-redis.yml'
-      - '.github/workflows/publish-image-snapshot.yml'
-      - '.gitlab-ci.yml'
+  schedule:
+    - cron: '0 7 * * *'
+#on:
+#  push:
+#    paths-ignore:
+#      - 'README.md'
+#      - '.github/workflows/build-and-test-postgres.yml'
+#      - '.github/workflows/build-and-test-redis.yml'
+#      - '.github/workflows/publish-image-snapshot.yml'
+#      - '.gitlab-ci.yml'
+#  pull_request:
+#    paths-ignore:
+#      - 'README.md'
+#      - '.github/workflows/build-and-test-postgres.yml'
+#      - '.github/workflows/build-and-test-redis.yml'
+#      - '.github/workflows/publish-image-snapshot.yml'
+#      - '.gitlab-ci.yml'
 
 jobs:
   pre_job:
