#226 - enable more detailed debug logging for memory and cpu usage

--- a/.github/workflows/build-and-test-oauth.yml
+++ b/.github/workflows/build-and-test-oauth.yml
@@ -118,6 +118,8 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         NODE_OPTIONS: --max_old_space_size=5120
         CYPRESS_NODE_OPTIONS: --max_old_space_size=5120
+        DEBUG: cypress:server:util:process_profiler
+        CYPRESS_DEBUG: cypress:server:util:process_profiler
 
     - name: upload result artifacts
       if: ${{ always() }}
