--- a/.github/workflows/generate-lighthouse-score.yml
+++ b/.github/workflows/generate-lighthouse-score.yml
@@ -77,7 +77,7 @@ jobs:
           cd e2e-tests
           npm install
           npm run cyServices:start
-          npm run cy:run:dev:accessibility
+          npm run cy:run:accessibility
           cd ..
 
       - name: Extract branch name
@@ -104,167 +104,3 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           branch: badges
-
-  build-skills-service-for-ui-tests:
-    needs: pre_job
-    if: ${{ needs.pre_job.outputs.should_skip != 'true' }}
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v2
-
-      - uses: actions/setup-node@v2-beta
-        with:
-          node-version: '14'
-
-      - uses: actions/setup-java@v1
-        with:
-          java-version: '11.X.X' # The JDK version to make available on the path.
-
-      - name: Print Versions
-        run: |
-          mvn --version
-          java -version
-
-      - name: Cache local Maven repository
-        uses: actions/cache@v2
-        with:
-          path: ~/.m2/repository
-          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-          restore-keys: |
-            ${{ runner.os }}-maven-
-
-      - name: Build skills-service
-        run: mvn --batch-mode install -DskipTests
-
-      - name: upload service jar
-        uses: actions/upload-artifact@v2
-        with:
-          name: service jar
-          path: ./service/target/*.jar
-
-  ui-tests-against-h2:
-    runs-on: ubuntu-latest
-    needs: [build-skills-service-for-ui-tests]
-    strategy:
-      # when one test fails, DO NOT cancel the other
-      # containers, because this will kill Cypress processes
-      # leaving the Dashboard hanging ...
-      # https://github.com/cypress-io/github-action/issues/48
-      fail-fast: false
-      matrix:
-        # run 4 copies of the current job in parallel
-        containers: [1, 2, 3, 4]
-
-    steps:
-    - name: Install Emoji Support
-      run: sudo apt-get install fonts-noto-color-emoji
-
-    - uses: actions/checkout@v2
-
-    - uses: actions/setup-node@v2-beta
-      with:
-        node-version: '14'
-
-    - uses: actions/setup-java@v1
-      with:
-        java-version: '11.X.X' # The JDK version to make available on the path.
-
-    - name: Print Versions
-      run: |
-        mvn --version
-        java -version
-
-    - uses: actions/download-artifact@v2
-      with:
-        name: service jar
-        path: ./service/target/
-
-    - name: Prep Services for Cypress tests
-      run: |
-        cd e2e-tests
-        npm install
-        npm run cyServices:start
-        cd ..
-
-    - name: Run Cypress tests
-      uses: cypress-io/github-action@v2
-      with:
-        working-directory: e2e-tests
-        record: true
-        parallel: true
-        group: 'skills-service tests'
-        tag: "${{ github.workflow }}"
-      env:
-        # pass the Dashboard record key as an environment variable
-        CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
-        # pass GitHub token to allow accurately detecting a build vs a re-run build
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-    - name: upload result artifacts
-      if: ${{ always() }}
-      uses: actions/upload-artifact@v2
-      with:
-        name: CI result artifacts ${{ matrix.container }}
-        path: |
-          ./service/target/*.log
-          ./e2e-tests/logs
-
-  service-against-postgresql:
-    needs: pre_job
-    if: ${{ needs.pre_job.outputs.should_skip != 'true' }}
-    runs-on: ubuntu-latest
-
-    services:
-      postgres:
-        image: postgres
-        # Provide the password for postgres
-        env:
-          POSTGRES_PASSWORD: skillsPassword
-          POSTGRES_DB: skills
-        # Set health checks to wait until postgres has started
-        options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-        ports:
-          # Maps tcp port 5432 on service container to the host
-          - 5432:5432
-
-    steps:
-      - uses: actions/checkout@v2
-
-      - uses: actions/setup-node@v2-beta
-        with:
-          node-version: '14'
-
-      - uses: actions/setup-java@v1
-        with:
-          java-version: '11.X.X' # The JDK version to make available on the path.
-
-      - name: Print Versions
-        run: |
-          mvn --version
-          java -version
-
-      - name: Cache local Maven repository
-        uses: actions/cache@v2
-        with:
-          path: ~/.m2/repository
-          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-          restore-keys: |
-            ${{ runner.os }}-maven-
-
-      - name: Build skills-service
-        run: mvn --batch-mode test -Dspring.datasource.url=jdbc:postgresql://localhost:5432/skills -Dspring.datasource.username=postgres -Dspring.datasource.password=skillsPassword
-
-      - name: upload result artifacts
-        if: ${{ always() }}
-        uses: actions/upload-artifact@v2
-        with:
-          name: CI result artifacts
-          path: |
-            ./service/target/*.log
-            ./e2e-tests/logs
-            ./e2e-tests/cypress/snapshots/*.js/__diff_output__/**
