--- a/.github/workflows/generate-lighthouse-score.yml
+++ b/.github/workflows/generate-lighthouse-score.yml
@@ -99,7 +99,7 @@ jobs:
           ref: 'badges'
 
       - name: Download accessibility score
-        id: 'archive-avg-score'
+        id: 'download-avg-score'
         uses: actions/download-artifact@v2
         with:
           name: accessibility_score
