#261 only run lighthouse action on branch for now

--- a/.github/workflows/generate-lighthouse-score.yml
+++ b/.github/workflows/generate-lighthouse-score.yml
@@ -16,6 +16,8 @@ name: Generate Lighthouse Accessibility Score
 
 on:
   push:
+    branches:
+      - ticket#261/lighthouse_badge
     paths-ignore:
       - 'README.md'
       - '.github/workflows/build-and-test-postgres.yml'
