#275 store all events per user and skillId aggregated into daily counts per user+skillId. Compact daily events into weekly counts for storage optimization after a configurable number of days

--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,7 @@
 
         <greenmail.version>1.6.0</greenmail.version>
         <wiremock.version>2.27.2</wiremock.version>
+        <redisson.version>3.14.1</redisson.version>
     </properties>
 
     <parent>
