--- a/service/src/main/resources/application.yml
+++ b/service/src/main/resources/application.yml
@@ -78,6 +78,7 @@ skills:
     enabled: false
   clientLibVersion: @maven.build.timestamp@
   config:
+    compactDailyEventsOlderThan: 60
     ui:
       dashboardVersion: @pom.version@
       buildTimestamp: @maven.build.timestamp@
