--- a/service/src/test/resources/application.properties
+++ b/service/src/test/resources/application.properties
@@ -27,6 +27,8 @@ skills.store.settings.public_groupName2.settingId3=valuec
 
 skills.authorization.userInfoUri=
 
+skills.config.compactDailyEventsOlderThan=3
+
 # Uncomment to run against local instance of Postgres
 #spring.datasource.url=jdbc:postgresql://localhost:5432/skills
 #spring.datasource.username=postgres
