--- a/service/src/test/resources/application.properties
+++ b/service/src/test/resources/application.properties
@@ -30,9 +30,9 @@ skills.authorization.userInfoUri=
 skills.config.compactDailyEventsOlderThan=3
 
 # Uncomment to run against local instance of Postgres
-spring.datasource.url=jdbc:postgresql://localhost:5455/skills
-spring.datasource.username=postgres
-spring.datasource.password=skillsPassword
+#spring.datasource.url=jdbc:postgresql://localhost:5432/skills
+#spring.datasource.username=postgres
+#spring.datasource.password=skillspass
 
 # Uncomment be able to connect to in memory H2 DB
 #spring.datasource.url=jdbc:h2:mem:skills
