#283 introduce concept of weeknumber to user events, change how daily and weekly events are merged, add tests

--- a/service/src/test/resources/application-pki.properties
+++ b/service/src/test/resources/application-pki.properties
@@ -25,6 +25,8 @@ skills.store.settings.public_groupName1.settingId1=valuea
 skills.store.settings.public_groupName1.settingId2=valueb
 skills.store.settings.public_groupName2.settingId3=valuec
 
+skills.config.compactDailyEventsOlderThan=3
+
 server.ssl.key-store=classpath:certs/test.skilltree.service.p12
 server.ssl.key-store-password=skillspass
 server.ssl.keyStoreType=PKCS12
