#152: validate approval messaage using custom validator

--- a/e2e-tests/serverConfigs/backend_application.properties
+++ b/e2e-tests/serverConfigs/backend_application.properties
@@ -23,3 +23,6 @@ logging.level.skills.services.events.SkillEventPublisher=WARN
 logging.level.org.springframework.messaging=WARN
 logging.level.skills=WARN
 skills.config.ui.userSuggestOptions=ONE,TWO,THREE
+
+skills.config.ui.paragraphValidationRegex=^(?i)(?s)((?!jabberwocky).)*$
+skills.config.ui.paragraphValidationMessage=paragraphs may not contain jabberwocky
