--- a/service/pom.xml
+++ b/service/pom.xml
@@ -552,6 +552,7 @@
                 <version>3.0</version>
                 <configuration>
                     <header>${basedir}/../license-add/LICENSE-HEADER.txt</header>
+                    <validHeaders>${basedir}/../license-add/LICENSE-HEADER_2021.txt</validHeaders>
                     <excludes>
                         <exclude>**/*.xml</exclude>
                         <exclude>**/*.jks</exclude>
