--- a/license-add/license-add-config.json
+++ b/license-add/license-add-config.json
@@ -1,7 +1,7 @@
 {
   "ignore": [ ".git", "coverage", ".*/**", ".*", "*.iml", "babel.config.js", "rollup.config.js", "app/assets/**", "target/**",
     "pom.xml", "build/**", "**/robots.txt", "**.svg", "**.config.js", "**/**/*.conf.js", "**/**/.*",
-    "cypress/videos/**", "**/*.jar", "**.xml", "cypress/fonts/**", "cypress/fixtures/**", "logs/*"
+    "cypress/videos/**", "**/*.jar", "**.xml", "cypress/fonts/**", "cypress/fixtures/**", "logs/*", "src/fonts/black-ops-one*"
   ],
   "license": "../license-add/LICENSE-HEADER.txt",
   "licenseFormats": {
