#354 changed user pie charge legend alignment, add comments to compactDailyEventsOlderThan setting, moved insertion of event_compaction_lock to changeset 4, updated e2e snapshots, changed layout of side by side post achievement charts to make pie chart larger at >= lg breakpoints

--- a/service/src/main/resources/application.yml
+++ b/service/src/main/resources/application.yml
@@ -78,6 +78,10 @@ skills:
     enabled: false
   clientLibVersion: @maven.build.timestamp@
   config:
+    # Changing this to a larger value once events have been compacted into WEEKLY events will cause
+    # those WEEKLY events which are now newer than the compactDailyEventsOlderThan to no longer be visible in the system
+    # Decreasing this value will temporarily cause any DAILY events older than the new value to not be visible until the next
+    # event compaction run.
     compactDailyEventsOlderThan: 30
     ui:
       dashboardVersion: @pom.version@
