#374: improve durability of notifications by storing them in db and then sending them async - WIP

--- a/service/src/main/resources/application.yml
+++ b/service/src/main/resources/application.yml
@@ -83,6 +83,9 @@ skills:
     # Decreasing this value will temporarily cause any DAILY events older than the new value to not be visible until the next
     # event compaction run.
     compactDailyEventsOlderThan: 30
+    notifications:
+      # run every minute
+      dispatchSchedule: "* * * * * *"
     ui:
       dashboardVersion: @pom.version@
       buildTimestamp: @maven.build.timestamp@
