--- a/service/src/test/resources/application.properties
+++ b/service/src/test/resources/application.properties
@@ -46,3 +46,8 @@ skills.config.compactDailyEventsOlderThan=3
 #logging.level.org.hibernate.type.descriptor.sql.BasicBinder: TRACE
 
 #server.tomcat.accesslog.enabled=true
+
+skills.config.notifications.dispatchSchedule=*/5 * * * * *
+
+
+
