#374: added retry mechanism with corresponding service tests; improved email configuration to be loaded from db every time to resolve settings caching bug when multiple instances are deployed

--- a/service/src/main/resources/application.yml
+++ b/service/src/main/resources/application.yml
@@ -85,7 +85,9 @@ skills:
     compactDailyEventsOlderThan: 30
     notifications:
       # run every minute
-      dispatchSchedule: "* * * * * *"
+      dispatchSchedule: "* * * * * ?"
+      # run every hour - retries failed notifications
+      dispatchRetrySchedule: "0 0 * * * ?"
     ui:
       dashboardVersion: @pom.version@
       buildTimestamp: @maven.build.timestamp@
