--- a/service/src/test/resources/application.properties
+++ b/service/src/test/resources/application.properties
@@ -48,6 +48,4 @@ skills.config.compactDailyEventsOlderThan=3
 #server.tomcat.accesslog.enabled=true
 
 skills.config.notifications.dispatchSchedule=*/5 * * * * *
-
-
-
+skills.config.notifications.dispatchRetrySchedule=*/10 * * * * *
