#374: send digest notifications based on user's preferences

--- a/service/src/test/resources/application-pki.properties
+++ b/service/src/test/resources/application-pki.properties
@@ -42,3 +42,6 @@ skills.authorization.userQueryUri=https://localhost:8181/userQuery?query={query}
 skills.authorization.userInfoHealthCheckUri=https://localhost:8181/actuator/health
 skills.authorization.authMode=PKI
 
+skills.config.notifications.dispatchSchedule=*/5 * * * * *
+skills.config.notifications.dispatchRetrySchedule=*/10 * * * * *
+skills.config.notifications.dispatchDigestSchedule=*/10 * * * * *
