--- a/service/src/test/resources/application.properties
+++ b/service/src/test/resources/application.properties
@@ -49,3 +49,5 @@ skills.config.compactDailyEventsOlderThan=3
 
 skills.config.notifications.dispatchSchedule=*/5 * * * * *
 skills.config.notifications.dispatchRetrySchedule=*/10 * * * * *
+skills.config.notifications.dispatchDigestSchedule=*/10 * * * * *
+
