#272 update achievement loading for point history to use same time limit used to retrieve user points. Set default to 5 years

--- a/service/src/main/resources/application.yml
+++ b/service/src/main/resources/application.yml
@@ -119,6 +119,7 @@ skills:
       maxNumPerformToCompletion: 10000
       maxNumPointIncrementMaxOccurrences: 999
       userSuggestOptions:
+      pointHistoryInDays: 1825
     client:
       loggingEnabled: false
       loggingLevel: DEBUG
