#374: resolved accessibility issues with the admin's stamp; upgraded libs; added capability to remove failed notifications after outside of the retention period

--- a/service/src/main/resources/application.yml
+++ b/service/src/main/resources/application.yml
@@ -88,6 +88,8 @@ skills:
       dispatchSchedule: "* * * * * ?"
       # run every hour - retries failed notifications
       dispatchRetrySchedule: "0 0 * * * ?"
+      # remove failed notifications after 2 days
+      retainFailedNotificationsForNumSecs: 172800
     ui:
       dashboardVersion: @pom.version@
       buildTimestamp: @maven.build.timestamp@
