--- a/service/src/test/resources/application-pki.properties
+++ b/service/src/test/resources/application-pki.properties
@@ -44,3 +44,4 @@ skills.authorization.authMode=PKI
 
 skills.config.notifications.dispatchSchedule=*/5 * * * * *
 skills.config.notifications.dispatchRetrySchedule=*/10 * * * * *
+skills.config.notifications.retainFailedNotificationsForNumSecs=30
