--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -51,6 +51,7 @@
   },
   "devDependencies": {
     "@babel/core": "7.11.6",
+    "@babel/plugin-proposal-optional-chaining": "^7.13.8",
     "@vue/cli-plugin-babel": "4.5.7",
     "@vue/cli-plugin-e2e-nightwatch": "4.5.7",
     "@vue/cli-plugin-eslint": "4.5.7",
