#414: debugging cypress tests failing on CI but working locally

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -188,6 +188,8 @@ jobs:
         path: |
           ./service/target/*.log
           ./e2e-tests/logs
+          ./e2e-tests/cypress/snapshots/**/**/__diff_output__/*.png
+          ./e2e-tests/cypress/snapshots/**/__diff_output__/*.png
 
   service-against-postgresql:
     needs: pre_job
