--- a/.github/workflows/build-and-test-rabbitmq.yml
+++ b/.github/workflows/build-and-test-rabbitmq.yml
@@ -101,3 +101,5 @@ jobs:
           ./service/target/*.jar
           ./service/target/*.log
           ./e2e-tests/logs
+          ./e2e-tests/cypress/snapshots/**/**/__diff_output__/*.png
+          ./e2e-tests/cypress/snapshots/**/__diff_output__/*.png
