#451 restrict help url protocols to http/https and relative urls. Don't encode full url, only include param values. Remove ampersand entity encoding from any existing urls

--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,7 @@
 
         <greenmail.version>1.6.0</greenmail.version>
         <wiremock.version>2.27.2</wiremock.version>
+        <owasp.encoder.version>1.2.3</owasp.encoder.version>
     </properties>
 
     <parent>
