#539 - Improve admin's projects page display and latency to better handle many projects per user - WIP

--- a/service/src/main/resources/application.yml
+++ b/service/src/main/resources/application.yml
@@ -95,6 +95,7 @@ skills:
       maxSubjectsPerProject: 25
       maxBadgesPerProject: 25
       maxSkillsPerSubject: 100
+      numProjectsForTableView: 10
       #it may be necessary to use the (?s) modifier for paragraph validation regexes, depending on the regex specified
       paragraphValidationRegex:
       paragraphValidationMessage:
