#527 project expiration - WIP

--- a/service/src/main/resources/application.yml
+++ b/service/src/main/resources/application.yml
@@ -83,6 +83,8 @@ skills:
       dispatchRetrySchedule: "0 0 * * * *"
       # remove failed notifications after 2 days
       retainFailedNotificationsForNumSecs: 172800
+    expireUnusedProjectsOlderThan: 180
+    expirationGracePeriod: 7
     ui:
       dashboardVersion: @pom.version@
       buildTimestamp: @maven.build.timestamp@
