--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -47,7 +47,7 @@
     "vue-virtual-scroll-list": "2.3.1",
     "vuejs-datepicker": "1.6.2",
     "vuex": "3.5.1",
-    "webstomp-client": "1.2.6",
+    "webstomp-client": "1.2.6"
   },
   "devDependencies": {
     "@babel/core": "7.11.6",
