#536: tryng running on chrome

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -125,6 +125,9 @@ jobs:
 
   ui-tests-against-h2:
     runs-on: ubuntu-latest
+    # Cypress Docker image with Chrome v78
+    # and Firefox v70 pre-installed
+    container: cypress/browsers:node12.13.0-chrome78-ff70
     needs: [build-skills-service-for-ui-tests]
     strategy:
       # when one test fails, DO NOT cancel the other
@@ -176,6 +179,7 @@ jobs:
         group: 'skills-service tests'
         tag: "${{ github.workflow }}"
         env: TZ='UTC',DEBUG='cypress:electron'
+        browser: chrome
       env:
         # pass the Dashboard record key as an environment variable
         CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
