--- a/service/src/test/resources/application.properties
+++ b/service/src/test/resources/application.properties
@@ -29,6 +29,9 @@ skills.authorization.userInfoUri=
 
 skills.config.compactDailyEventsOlderThan=3
 
+skills.config.expireUnusedProjectsOlderThan=0
+skills.config.expirationGracePeriod=2
+
 # Uncomment to run against local instance of Postgres
 #spring.datasource.url=jdbc:postgresql://localhost:5432/skills
 #spring.datasource.username=postgres
