#527 responding to code review comments

--- a/service/src/main/resources/application.yml
+++ b/service/src/main/resources/application.yml
@@ -83,11 +83,10 @@ skills:
       dispatchRetrySchedule: "0 0 * * * *"
       # remove failed notifications after 2 days
       retainFailedNotificationsForNumSecs: 172800
+    unusedProjectDeletionEnabled: true
     expireUnusedProjectsOlderThan: 180
     expirationGracePeriod: 7
     projectExpirationSchedule: "* 4 0 * * *"
-    expiringProjectNotificationSchedule: "* 15 0 * * *"
-    deleteUnusedProjectSchedule: "* 55 23 * * *"
     ui:
       dashboardVersion: @pom.version@
       buildTimestamp: @maven.build.timestamp@
