--- a/service/pom.xml
+++ b/service/pom.xml
@@ -70,9 +70,7 @@
         <dependency>
             <groupId>org.springframework.security.oauth.boot</groupId>
             <artifactId>spring-security-oauth2-autoconfigure</artifactId>
-            <version>2.3.3.RELEASE</version>
-<!--            Can not use the same version and they don't line up-->
-<!--            <version>${springboot.version}</version>-->
+            <version>${springboot.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
