--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>skill-tree</groupId>
     <artifactId>skills-service-parent</artifactId>
     <packaging>pom</packaging>
-    <version>1.5.0</version>
+    <version>1.6.0-SNAPSHOT</version>
     <modules>
         <module>call-stack-profiler</module>
         <module>dashboard</module>
