--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -51,7 +51,7 @@
   },
   "devDependencies": {
     "@babel/core": "7.11.6",
-    "@babel/plugin-proposal-optional-chaining": "^7.13.8",
+    "@babel/plugin-proposal-optional-chaining": "7.13.8",
     "@vue/cli-plugin-babel": "4.5.7",
     "@vue/cli-plugin-e2e-nightwatch": "4.5.7",
     "@vue/cli-plugin-eslint": "4.5.7",
@@ -68,7 +68,7 @@
     "moment-timezone": "0.5.31",
     "node-sass": "4.14.1",
     "sass-loader": "10.0.3",
-    "vue-cli-plugin-webpack-bundle-analyzer": "~2.0.0",
+    "vue-cli-plugin-webpack-bundle-analyzer": "2.0.0",
     "vue-template-compiler": "2.6.12"
   }
 }
