--- a/client-display/package.json
+++ b/client-display/package.json
@@ -36,7 +36,8 @@
     "q": "1.5.1",
     "tinycolor2": "1.4.1",
     "url-search-params-polyfill": "8.1.0",
-    "vis": "4.21.0",
+    "vis-data": "7.1.2",
+    "vis-network": "9.0.4",
     "vue": "2.6.12",
     "vue-apexcharts": "1.6.1",
     "vue-js-toggle-button": "1.3.3",
